[gd_scene load_steps=13 format=2]

[ext_resource path="res://levels/level_0_template/level_0.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/level_10/stairs 12_hole.tscn" type="PackedScene" id=2]
[ext_resource path="res://skybox/env_qwantani.tres" type="Environment" id=3]
[ext_resource path="res://textures/grass.tres" type="Material" id=4]
[ext_resource path="res://scripts/convo_trigger.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/level_10/grass.gd" type="Script" id=6]
[ext_resource path="res://assets/hapen_coin_5.tscn" type="PackedScene" id=7]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="BoxShape" id=5]

[sub_resource type="PlaneMesh" id=3]

[sub_resource type="ConcavePolygonShape" id=4]
data = PoolVector3Array( 1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1 )

[node name="level_10" instance=ExtResource( 1 )]

[node name="WorldEnvironment" parent="." index="2"]
environment = ExtResource( 3 )

[node name="DirectionalLight" parent="." index="3"]
transform = Transform( 0.506744, 0.328406, -0.797095, 0.0655557, 0.907244, 0.415464, 0.8596, -0.262788, 0.438212, 0, 0.956483, 0 )

[node name="Player" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.87699, -4.16548 )

[node name="stairs 12_hole" parent="." index="6" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0367852, 0 )

[node name="MeshInstance" type="MeshInstance" parent="stairs 12_hole" index="1"]
transform = Transform( 1.385, 0, 0, 0, 1.016, 0, 0, 0, 1.279, 0, -0.143472, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Area" type="Area" parent="stairs 12_hole" index="2"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.26566, 0 )

[node name="CollisionShape" type="CollisionShape" parent="stairs 12_hole/Area" index="0"]
shape = SubResource( 5 )

[node name="grass" type="MeshInstance" parent="." index="7"]
transform = Transform( 100, 0, 0, 0, 1, 0, 0, 0, 100, -0.0124446, -0.224321, 0.0794029 )
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )
script = ExtResource( 6 )

[node name="StaticBody2" type="StaticBody" parent="grass" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="grass/StaticBody2" index="0"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="grass" index="1"]
wait_time = 12.0
one_shot = true

[node name="convo_trigger_8" parent="." index="9" instance=ExtResource( 5 )]
transform = Transform( 100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0 )

[node name="convo_trigger_116" parent="." index="10" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 0.999949, 0.0101227, 0, -0.0101227, 0.999949, 0, 1.35945, 15.3921 )

[connection signal="body_entered" from="stairs 12_hole/Area" to="grass" method="_on_Area_body_entered"]
[connection signal="timeout" from="grass/Timer" to="grass" method="_on_Timer_timeout"]
